# bmp2chr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bmp2chr_config.h.in  result.txt
charsets/: dos40.char
src/: bmp2chr.cpp  charset.cpp  charset.hpp  converter.cpp  converter.hpp  file.cpp  file.hpp
